rm _ in query params
